--- a/qpkg.cfg
+++ b/qpkg.cfg
@@ -3,8 +3,8 @@ QPKG_SOURCE_DIR="."
 QPKG_QPKG_FILE="mykodi17.qpkg"
 QPKG_SOURCE_FILE="mykodi17.tgz"
 QPKG_NAME="mykodi17"
-QPKG_DISPLAY_NAME="mykodi17.0.3"
-QPKG_VER="1-17.0.B1"
+QPKG_DISPLAY_NAME="mykodi17.0.B2"
+QPKG_VER="1-17.0.B2"
 QPKG_VERSION_NAME="kodi17"
 QPKG_RC_NUM="194" #for rcS and rcK modified by script (pos in qpkg.conf)
 QPKG_WEB_PORT=""
